--- a/src/componants/data/projects.json
+++ b/src/componants/data/projects.json
@@ -42,7 +42,7 @@
   {
     "key": 6,
     "title": "Easy-Job Portal",
-    "imageSrc": "https://png.pngtree.com/png-clipart/20220213/original/pngtree-e-letter-logo-ecommerce-shop-store-design-png-image_7265997.png",
+    "imageSrc": "https://img.freepik.com/premium-photo/business-man-working-laptop-with-job-search-screen_218381-8578.jpg",
     "description": "A job portal platform developed using Python and Django. Users can search for jobs, apply online, and companies can post vacancies with admin controls for managing users and listings.",
     "demo": "#",
     "source": "/"
